# filecopyex3

./: .gitignore  CMakeLists.txt  ChangeLog  FileCopyEx.rc  FileCopyEx.sln  FileCopyEx.vcproj  FileCopyEx.vcxproj  FileCopyEx.vcxproj.filters  FileCopyEx3.rc  FileCopyEx3.sln  FileCopyEx3.vc10.sln  FileCopyEx3.vc10.vcxproj  FileCopyEx3.vcproj  FileCopyEx3.vcxproj  LICENSE.txt  README.md  TODO.Txt  build_filecopyex3.cmd  build_filecopyex3_release.cmd  changelog.txt  make_dist.cmd  plugin.def  plugin.gcc.def  test.cmd  testDebug.cmd  testRelease.cmd
FileCopyEx/: Api.cpp  Api.h  Classes.cpp  Classes.h  Common.h  Config.cpp  CopyProgress.cpp  CopyProgress.h  Engine.cpp  Engine.h  EngineTools.cpp  EngineTools.h  FileCopyEx.cpp  FileCopyEx.h  FileCopyEx.ncb  FileCopyEx.rc  FileCopyEx.sln  FileCopyEx.vcproj  Main.cpp  TempPanel.cpp  TempPanel.h  Utils.cpp  resource.h
Framework/: Array.h  FileUtils.cpp  FileUtils.h  FwCommon.cpp  FwCommon.h  Heap.cpp  Heap.h  LowLevelStr.cpp  LowLevelStr.h  ObjString.cpp  ObjString.h  Object.cpp  Object.h  Properties.cpp  Properties.h  StdHdr.h  Store.cpp  Store.h  StrUtils.cpp  StrUtils.h  StringList.cpp  StringList.h  ValueList.cpp  ValueList.h  common.cpp  common.h  taskbar_icon.cpp  taskbar_icon.h
Framework/FAR/: FarDialog.cpp  FarDialog.h  FarDlgClass.cpp  FarDlgClass.h  FarDlgObject.cpp  FarDlgObject.h  FarPanel.cpp  FarPanel.h  FarPlugin.cpp  FarPlugin.h  FarProgress.cpp  FarProgress.h  FarRegistry.cpp  FarRegistry.h  FarUI.cpp  FarUI.h  dialog.cpp  dialog.h  dlgclass.cpp  dlgclass.h  dlgobject.cpp  dlgobject.h  panel.cpp  panel.h  plugin.cpp  plugin.h  progress.cpp  progress.h  registry.cpp  registry.h  taskbar_icon.cpp  taskbar_icon.h  ui.cpp  ui.h  version.hpp
Framework/FAR/interface/: farcolor.hpp  farkeys.hpp  fmt.hpp  plugin.hpp
data/: Russian.hlf  english.lng  file_id.diz  russian.lng  spanish.lng
data/doc/: history.eng.html  history.rus.html  readme.eng.html  readme.rus.html  text.css
data/resource/: dialogs.objd  english.locd  russian.locd  spanish.locd
src/: Classes.cpp  Classes.h  Common.h  Config.cpp  CopyProgress.cpp  CopyProgress.h  DLLExport.cpp  Engine.cpp  Engine.h  EngineTools.cpp  EngineTools.h  FarMacro.cpp  FarMacro.h  FarMenu.cpp  FarMenu.h  FarNode.cpp  FarNode.h  FarPayload.cpp  FarPayload.h  FarPlugin.cpp  FarPlugin.h  FarProgress.cpp  FarProgress.h  FarSettings.cpp  FarSettings.h  FileCopyEx.cpp  FileCopyEx.h  FileCopyExPlugin.cpp  FileCopyExPlugin.h  Main.cpp  TempPanel.cpp  TempPanel.h  UnityBuildFileCopyEx3.cpp  Utils.cpp  changelog.txt  common.cpp  dialog.cpp  dialog.h  dlgclass.cpp  dlgclass.h  (+19 more)
src/AsyncFramework/: AsyncCall.h  CriticalSection.h  Future.h  IJob.h  JobBase.cpp  JobScheduler.cpp  JobScheduler.h  Thread.cpp  Thread.h  WaitableEvent.cpp  WaitableEvent.h  stdafx.h
src/Framework/: Array.h  CastNode.h  CastObject.h  DescList.cpp  DescList.h  FileNameStore.h  FileNameStoreEnum.cpp  FileNameStoreEnum.h  FileUtils.cpp  FileUtils.h  FrameworkUtils.cpp  FrameworkUtils.h  Locale.cpp  LocaleUtils.cpp  LocaleUtils.h  LowLevelStr.cpp  LowLevelStr.h  Node.cpp  Node.h  ObjString.cpp  ObjString.h  Object.cpp  Object.h  ObjectClass.cpp  ObjectClass.h  ObjectManager.cpp  ObjectManager.h  Payload.cpp  Payload.h  Properties.cpp  Properties.h  StdHdr.h  Store.cpp  Store.h  StrUtils.cpp  StrUtils.h  StringList.cpp  StringList.h  StringParent.cpp  StringParent.h  (+3 more)
src/SDK/: DlgBuilder.hpp  farcolor.hpp  farversion.hpp  plugin.hpp
vc6/: prec_hdr.cpp  vc6.dsp  vc6.dsw
